==> code-ss99/STM32/stsw-m24sr001_v2.0.0/Libraries/M24SR/src/drv_I2C_M24SR.c <==
#include "drv_I2C_M24SR.h"

int8_t M24SR_PollI2C ( void )
{
uint32_t	M24SR_Timeout = 0;
uint16_t	NbAtempt = M24SR_I2C_POLLING,
					uSR1register= 0x0000;

  /*---------------------------- Transmission Phase ---------------------------*/
	 do{	  
		 
		/* In the loop avoid to send START just after STOP */
		/* At 400kHz see issue where start condition was sent but not the 7bits addr... */ 
		delay_us (1); 
		 
		M24SR_Timeout = 0x40;  
		 /*!< Clear the M24SR_I2C AF flag */
		I2C_ClearFlag(M24SR_I2C, I2C_FLAG_AF);

		/*!< Enable M24SR_I2C acknowledgement if it is already disabled by other function */
		I2C_AcknowledgeConfig(M24SR_I2C, DISABLE);
		
		/*!< Send M24SR_I2C START condition */
		I2C_GenerateSTART(M24SR_I2C, ENABLE);

		/*!< Test on M24SR_I2C EV5 and clear it */
		while ((!I2C_GetFlagStatus(M24SR_I2C,I2C_FLAG_SB)) && --M24SR_Timeout)  /*!< EV5 */
		{
		}
				
	 /*!< Send M24SR64-Y slave address for write */
		I2C_Send7bitAddress(M24SR_I2C, M24SR_ADDR, I2C_Direction_Transmitter);
		M24SR_Timeout = 0x40; 
		
		uSR1register = I2C_ReadRegister(M24SR_I2C, I2C_Register_SR1);
		/* Note: ADDR is not set after a NACK reception */
		while ( ((uSR1register != 0x0400) && ((uSR1register&0x0002) !=0x0002))&& --M24SR_Timeout)/*BUSY & MSL & ADDR */
		{
			/*reads the SR1 register */ 
			uSR1register = I2C_ReadRegister(M24SR_I2C, I2C_Register_SR1);
			uSR1register &= 0x0482;
		}	
		
		/* Send STOP Condition */
		I2C_GenerateSTOP(M24SR_I2C, ENABLE);
				
		if (M24SR_Timeout == 0)
		{
			return M24SR_ERROR_NBATEMPT;
		}
		
		if (uSR1register == 0x0002)
		{
			/* Disable the START condition generation */
			I2C_Cmd(M24SR_I2C, DISABLE);
			do
			{
				uSR1register = I2C_ReadRegister(M24SR_I2C, I2C_Register_SR1);
			}
			while( (uSR1register&0x0002) ==0x0002);
			
			I2C_Cmd(M24SR_I2C, ENABLE);

			return M24SR_STATUS_SUCCESS;		
		}

	} while ( (uSR1register != 0x0000) && (--NbAtempt > 0) );
	
	if (NbAtempt == 0)
	{
			return M24SR_ERROR_NBATEMPT;
	}
	return M24SR_ERROR_NACK;

}

int8_t M24SR_SendI2Ccommand ( uc8 NbByte , uc8 *pBuffer )
{
	uint32_t M24SR_Timeout = M24SR_I2C_TIMEOUT;
	uint8_t	NthByte= 0;

  /*!< Clear the M24SR_I2C AF flag */
  I2C_ClearFlag(M24SR_I2C, I2C_FLAG_AF);

  /*!< Enable M24SR_I2C acknowledgement if it is already disabled by other function */
  I2C_AcknowledgeConfig(M24SR_I2C, ENABLE);

  /*---------------------------- Transmission Phase ---------------------------*/

  /*!< Send M24SR_I2C START condition */
  I2C_GenerateSTART(M24SR_I2C, ENABLE);

  /*!< Test on M24SR_I2C EV5 and clear it */
  while ((!I2C_GetFlagStatus(M24SR_I2C,I2C_FLAG_SB)) && M24SR_Timeout)  /*!< EV5 */
  {
   if (M24SR_Timeout-- == 0) goto Error;
  }
  
  M24SR_Timeout = M24SR_I2C_TIMEOUT;

  /*!< Send M24SR** slave address  */
  I2C_Send7bitAddress(M24SR_I2C, M24SR_ADDR, I2C_Direction_Transmitter);

  while ((!I2C_CheckEvent(M24SR_I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED)) && M24SR_Timeout)/* EV6 */
  {
   if (--M24SR_Timeout == 0) goto Error;
  }
	/* check the AF a flag*/
	
	for (NthByte = 0; NthByte < NbByte ; NthByte ++)
	{
		/* Send the device's internal address to write to */
		I2C_SendData(M24SR_I2C, pBuffer[NthByte]);  

	  /* Test on TXE FLag (data sent) */
		M24SR_Timeout = M24SR_FLAG_TIMEOUT;
		while ((!I2C_GetFlagStatus(M24SR_I2C,I2C_FLAG_TXE)) && (!I2C_GetFlagStatus(M24SR_I2C,I2C_FLAG_BTF)))  
		{
		 if (M24SR_Timeout-- == 0) goto Error;
		}
	}
  
	/* Send STOP Condition */
  I2C_GenerateSTOP(M24SR_I2C, ENABLE);
	
	M24SR_Timeout = M24SR_I2C_TIMEOUT;
  /*!< Test on M24SR_I2C EV7 and clear it */
  while (( (M24SR_I2C->CR1 & 0x0200) != 0x0000)  && M24SR_Timeout--)  /*!< EV7 */
  {
  }
	
	if( (M24SR_I2C->SR1 & 0x0400) )
	{
		/* No acknowledgement from M24SR */
		return  M24SR_ERROR_NOACKNOWLEDGE;
	}
	
	return M24SR_STATUS_SUCCESS;
	
Error :
	/* Send STOP Condition */
  I2C_GenerateSTOP(M24SR_I2C, ENABLE);
	return M24SR_ERROR_I2CTIMEOUT;
}

int8_t M24SR_ReceiveI2Cresponse ( uint8_t NbByte , uint8_t *pBuffer )
{
uint32_t M24SR_Timeout = M24SR_I2C_TIMEOUT/2;
uint8_t i=0,
				NthByte;

  /*!< Clear the M24SR_I2C AF flag */
  I2C_ClearFlag(M24SR_I2C, I2C_FLAG_AF);

  /*---------------------------- Transmission Phase ---------------------------*/

	/* &&&& MUST NOT BE INTERRUPTED TIMING IS CRITICAL INSIDE THIS SECTION &&&&& */
	
  /*!< Send M24SR_I2C START condition */
  I2C_GenerateSTART(M24SR_I2C, ENABLE);
	
	  /*!< Enable M24SR_I2C acknowledgement if it is already disabled by other function */
  I2C_AcknowledgeConfig(M24SR_I2C, DISABLE);

  /*!< Test on M24SR_I2C EV5 and clear it */
  while ((!I2C_GetFlagStatus(M24SR_I2C,I2C_FLAG_SB)) && M24SR_Timeout)  /*!< EV5 */
  {
   if (M24SR_Timeout-- == 0) goto Error;
  }
  
  /*!< Send M24SR_I2C slave address for write */
  I2C_Send7bitAddress(M24SR_I2C, M24SR_ADDR, I2C_Direction_Receiver);

  /* Test on ADDR Flag */
  M24SR_Timeout = M24SR_FLAG_TIMEOUT;
  while (!I2C_CheckEvent(M24SR_I2C, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED))   
  {
    if((M24SR_Timeout--) == 0) 
			goto Error;
  }
	
	I2C_AcknowledgeConfig(M24SR_I2C, ENABLE);
	
	/* &&&& MUST NOT BE INTERRUPTED TIMING IS CRITICAL INSIDE THIS SECTION &&&&& */
	
	/* recover the device select byte */
	I2C_ReceiveData(M24SR_I2C); 

	/* Test on RXE FLag (data sent) */
	M24SR_Timeout = M24SR_FLAG_TIMEOUT;
	while ((!I2C_GetFlagStatus(M24SR_I2C,I2C_FLAG_RXNE)) )  
	{
	 if (M24SR_Timeout-- == 0)
		 goto Error;
	}

	/* read the NthByte bytes*/
	for (NthByte = NbByte; NthByte >1 ; NthByte --)
	{	
				
		/* deactive the ACKbit*/
		if (NthByte == 2)
		{
			M24SR_I2C->CR1 &= ~(0x0400);
			I2C_GenerateSTOP(M24SR_I2C, ENABLE);	
		}
				
		/* Send the device's internal address to write to */
		pBuffer[i++] = I2C_ReceiveData(M24SR_I2C);  

		/* Test on RXE FLag (data sent) */
		M24SR_Timeout = M24SR_FLAG_TIMEOUT;
		while ((!I2C_GetFlagStatus(M24SR_I2C,I2C_FLAG_RXNE)) )  
		{
			if (M24SR_Timeout-- == 0) goto Error;
		}
			
	}
	pBuffer[i++] = I2C_ReceiveData(M24SR_I2C);


	M24SR_Timeout = M24SR_I2C_TIMEOUT;
  /*!< Test on M24SR_I2C EV7 and clear it */
  while (( (M24SR_I2C->CR1 & 0x0200) != 0x0000)  && M24SR_Timeout--)  /*!< EV7 */
  {
  }

	return M24SR_STATUS_SUCCESS;
	
Error :
	/* Send STOP Condition */
  I2C_GenerateSTOP(M24SR_I2C, ENABLE);
	return M24SR_ERROR_I2CTIMEOUT;
}

int8_t M24SR_IsAnswerReady ( void )
{
	int8_t status;
  uint32_t retry = 0x3FFFF;
	uint8_t stable = 0;
	
		switch (uSynchroMode)
		{
			case M24SR_WAITINGTIME_POLLING :
				errchk(M24SR_PollI2C ( ));
				return M24SR_STATUS_SUCCESS;
			
			case M24SR_WAITINGTIME_TIMEOUT :
				// M24SR FWI=5 => (256*16/fc)*2^5=9.6ms but M24SR ask for extended time to program up to 246Bytes.
				delay_ms (80);	
				return M24SR_STATUS_SUCCESS;
			
			case M24SR_WAITINGTIME_GPO :
				/* Here we check if I2C answer is ready, so if GPO of M24SR is low */
			  /* Mapping an interrupt was impossible because EXTI_line 6 was already taken by Joystick SEL */
			  /* HW: GPO --> PA6 and Joystick SEL --> PB6 */
				/* Idealy use an interrupt here */
				do
				{
					if( GPIO_ReadInputDataBit(M24SR_GPO_PIN_PORT,M24SR_GPO_PIN) == Bit_RESET)
					{
						stable ++;						
					}
					retry --;						
				}
				while(stable <5 && retry>0);
				if(!retry)
					goto Error;
				
				return M24SR_STATUS_SUCCESS;
			
			default : 
				return M24SR_ERROR_DEFAULT;
		}

Error :
		return M24SR_ERROR_DEFAULT;
}

void M24SR_RFConfig_Hard( uc8 OnOffChoice)
{
	/* Disable RF */
	if ( OnOffChoice != 0 )
	{	
	#if defined STM32F40_41xxx
		M24SR_RFDIS_PIN_PORT->BSRRH = M24SR_RFDIS_PIN;
	#else
		M24SR_RFDIS_PIN_PORT->BRR = M24SR_RFDIS_PIN; 
	#endif
	}
	else
	{	
	#if defined STM32F40_41xxx
		M24SR_RFDIS_PIN_PORT->BSRRL = M24SR_RFDIS_PIN;		
	#else
		M24SR_RFDIS_PIN_PORT->BSRR = M24SR_RFDIS_PIN;		
	#endif
	}
}
